Corrected index file

--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
               <span class="close">&times;</span>
               <h1>Hi, I'm <span>Joana</span></h1>
               <div class="profile-statement ">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo atque consectetur a beatae? 
-                  Quae, ex doloribus reprehenderit repudiandae quod modi, veniam quam, perferendis necessitatibus 
-                  excepturi ullam exercitationem temporibus cum cupiditate..</p>
-                </div>
+                <ul>
+                  <li>Skills</li>
+                  <li>Experience</li>
+                  <li>Fun Fact</li>
+                  <li>Resume</li>
+                </ul>
+              </div>
               <div class="btn-box">
                 <a href="#contact" class="btn">Let's Talk</a>
               </div>
