--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2024. By Joana Lawer | All Rights Reserved.</p>
-            <p>Design inspired by: <a href="https://codehalweb.com/">Codehal</a> and <a href="#">Another website</a> All Rights Reserved.</p>
+            <p>Design inspired by: <a href="https://codehalweb.com/">Codehal</a> and <a href="#">Another website</a></p>
         </div>
 
         <div class="footer-icon">
