--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               <img class="card-img-top" src="../static/images/peribank.png" alt="Card image">
             </div> 
             <h4>Online Banking</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <p>A banking web application using HTML, CSS, JavaScript, and PostgreSQL.</p>
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
             </div>
