Added description for text claasification

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
             </div>
             <h4>Text Classification</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <p> A simple classification API to predict if a messafe is spam or ham (not spam).</p>
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
             </div>
