Changed subheading for blog and portfolio

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <p class="portfolio-heading">Portfolio</p>
             <hr>
             <center>
-              <h3 class="section-subheading text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+              <h3 class="section-subheading text-muted">Explore some projects I have worked on</h3>
             </center>
           </div>
         </div>
@@ -280,7 +280,7 @@
               <p class="services-heading">Blog</p>
               <hr>
               <center>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                <h3 class="section-subheading text-muted">I write on experiences and findings from projects and other engagements</h3>
               </center>
             </div>
           </div>
@@ -348,7 +348,7 @@
               
               <div class="contact-details">
                 <i class='bx bx-envelope'></i>lawerjoana477@gmail.com<br>
-                <i class='bx bx-globe'></i>www.joana-lawer.com
+                <i class='bx bx-globe'></i>www.joanalawer.me
               </div>
 
               <div class="social-profile">
