Changed text on profile modal

--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
               <span class="close">&times;</span>
               <h1>Hi, I'm <span>Joana</span></h1>
               <div class="profile-statement ">
-                <ul>
-                  <li>Skills</li>
-                  <li>Experience</li>
-                  <li>Fun Fact</li>
-                  <li>Resume</li>
-                </ul>
+                <p>Skills:
+                  <br>
+                  Experience:
+                  <br>
+                  Fun Fact:
+                  <br>
+                  Resume:
+                </p>
               </div>
               <div class="btn-box">
                 <a href="#contact" class="btn">Let's Talk</a>
