Removed modal and added page link

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             </div>
             
             <div class="col-lg-3 text-center">
-              <div class="services-icon" data-toggle="modal" data-target="#volTrainModal">
-                <a href="#"><i class="bx bx-heart"></i></a>
+              <div class="services-icon" data-toggle="" data-target="#volTrainModal">
+                <a href="volunteer.html"><i class="bx bx-heart"></i></a>
               </div>
                 <h4>Volunteering &amp; Training</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -200,7 +200,7 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div class="modal-body">
+                  <div class="modal-body">a
                     <p>Volunteering & Training modal content goes here.</p>
                   </div>
                   <div class="modal-footer">
