--- a/volunteer.html
+++ b/volunteer.html
@@ -19,17 +19,17 @@
   <body>
       <!-- NAVIGATION BAR -->
       <header class="header">
-        <a href="#" class="logo_name" style="text-decoration: none;">Joana Lawer<span class="animate" style="--i:1;"></span></a>
+        <a href="index.html" class="logo_name" style="text-decoration: none;">Joana Lawer<span class="animate" style="--i:1;"></span></a>
 
         <!-- menu icon -->
         <div class='bx bx-menu'id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
         <nav class="menu_list">
-          <a href="#home">Home</a>
-          <a href="#services">Services</a>
-          <a href="#portfolio">Portfolio</a>
-          <a href="#blog">Blog</a>
-          <a href="#contact">Contact</a>
+          <a href="index.html">Home</a>
+          <a href="index.html">Services</a>
+          <a href="index.html">Portfolio</a>
+          <a href="index.html">Blog</a>
+          <a href="index.html">Contact</a>
 
           <span class="active-nav"></span>
           <span class="animate" style="--i:3;"></span>
@@ -38,7 +38,50 @@
       <!-- END NAVIGATION BAR -->
 <!-- GALLERY SECTION -->
 <section>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+        <div class="col-lg-3">
+            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        </div>
+    </div>
+</div>
 </section>
 <!-- ENG GALLERY SECTION -->
 
