Created style for volunteer images

--- a/volunteer.html
+++ b/volunteer.html
@@ -37,19 +37,19 @@
       </header>
       <!-- END NAVIGATION BAR -->
 <!-- GALLERY SECTION -->
-<section>
+<section class="volunteer" id="gallery">
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 card">
             <img class="card-img-top" src="../static/images/text.jpg" alt="">
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 card">
             <img class="card-img-top" src="../static/images/text.jpg" alt="">
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 card">
             <img class="card-img-top" src="../static/images/text.jpg" alt="">
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 card">
             <img class="card-img-top" src="../static/images/text.jpg" alt="">
         </div>
     </div>
