--- a/volunteer.html
+++ b/volunteer.html
@@ -40,45 +40,91 @@
 <section class="volunteer" id="gallery">
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-3 card">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
         </div>
-        <div class="col-lg-3 card">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
         </div>
-        <div class="col-lg-3 card">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
         </div>
-        <div class="col-lg-3 card">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-3">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
-        </div>
-        <div class="col-lg-3">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
-        </div>
-        <div class="col-lg-3">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
-        </div>
-        <div class="col-lg-3">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-3">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
         </div>
-        <div class="col-lg-3">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
         </div>
-        <div class="col-lg-3">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
         </div>
-        <div class="col-lg-3">
-            <img class="card-img-top" src="../static/images/text.jpg" alt="">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
+        </div>
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
+        </div>
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
+        </div>
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
+        </div>
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
+        </div>
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
+        </div>
+        <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
+            </div>
         </div>
     </div>
 </div>
