Updated data and web profile

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                 <a href="#"><i class="bx bx-bar-chart"></i></a>
               </div>
                 <h4>Data Analysis</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p>Experience in data visualization, developing and maintaing dashboards, database
+                  management and reporting. Have a keen eye for details, effective communication, collaboration
+                  and ensuring accurate and high-quality work.</p>
             </div>
             <!-- Data Analysis Modal -->
             <div class="modal fade" id="dataAnalysisModal" tabindex="-1" role="dialog" aria-labelledby="dataAnalysisModalLabel" aria-hidden="true">
@@ -117,11 +119,14 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div class="modal-body">
-                    <p>Data Analysis modal content goes here. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam fugiat facere sunt laboriosam 
-                      quidem eius non fuga, quasi tempore vitae odit modi doloribus, cum molestiae illum qui. Laborum, doloribus atque?</p>
+                  <div class="profile-statement ">
+                    <p>Tools: Excel/Google Sheets, Python, PowerBI, SQL, Jupyter Notebooks
+                      <br>
+                      Industry(ies): Health, Tech/Governance
+                      <br>
+                    </p>
                   </div>
-                  <div class="modal-footer">
+                      <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                   </div>
                 </div>
@@ -133,7 +138,7 @@
                 <a href="#"><i class="bx bx-code-alt"></i></a>
               </div>
                 <h4>Web Development</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p>Skilled in front-end and back-end development, database management, and ensuring seamless functionality.</p>
             </div>
             <!-- Web Development Modal -->
             <div class="modal fade" id="weDevModal" tabindex="-1" role="dialog" aria-labelledby="webDevModalLabel" aria-hidden="true">
@@ -145,8 +150,12 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div class="modal-body">
-                    <p>Web Development modal content goes here.</p>
+                  <div class="profile-statement ">
+                    <p>Tools: Html, CSS, JavaScript, Bootstrap, NodeJS, PostgreSQL, MySQL, Flask, Git/GitHub, WordPress
+                      <br>
+                      <!-- Industry(ies): Health, Tech/Governance  -->
+                      <br>
+                    </p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
