--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="dataAnalysisModalLabel">Data Analysis</h5>
+                    <h4 class="modal-title" id="dataAnalysisModalLabel">Data Analysis Profile</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
                   <div class="profile-statement ">
-                    <p>Tools: Excel/Google Sheets, Python, PowerBI, SQL, Jupyter Notebooks
+                    <p><b>Tools:</b> Excel/Google Sheets, Python, PowerBI, SQL, Jupyter Notebooks
                       <br>
-                      Industry(ies): Health, Tech/Governance
+                      <b>Industry(ies):</b> Health, Tech/Governance
                       <br>
                     </p>
                   </div>
@@ -145,7 +145,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="webdevModalLabel">Web Development Modal</h5>
+                    <h4 class="modal-title" id="webdevModalLabel">Web Development Profile</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
