Updated nlp service

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
                 <a href="#"><i class="bx bx-conversation"></i></a>
               </div>
                 <h4>Natural Language Processing</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p>Skilled in NLP with experience in text classification, chatbot development, 
+                  and deploying models using Python libraries.</p>
               </a>
             </div>
             <!-- NLP Modal -->
