Modified data analysis

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
               </div>
                 <h4>Data Analysis</h4>
                 <p>Experience in data visualization, developing and maintaing dashboards, database
-                  management and reporting. Have a keen eye for details, effective communication, collaboration
-                  and ensuring accurate and high-quality work.</p>
+                  management and reporting.</p>
             </div>
             <!-- Data Analysis Modal -->
             <div class="modal fade" id="dataAnalysisModal" tabindex="-1" role="dialog" aria-labelledby="dataAnalysisModalLabel" aria-hidden="true">
