Updayed nlp profile

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                     </button>
                   </div>
                   <div class="profile-statement ">
-                    <p>Tools: Html, CSS, JavaScript, Bootstrap, NodeJS, PostgreSQL, MySQL, Flask, Git/GitHub, WordPress
+                    <p><b>Tools:</b> Html, CSS, JavaScript, Bootstrap, NodeJS, PostgreSQL, MySQL, Flask, Git/GitHub, WordPress
                       <br>
-                      <!-- Industry(ies): Health, Tech/Governance  -->
+                      <!-- <b>Industry(ies):</b> Health, Tech/Governance  -->
                       <br>
                     </p>
                   </div>
@@ -182,8 +182,12 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div class="modal-body">
-                    <p>NLP modal content goes here.</p>
+                  <div class="profile-statement ">
+                    <p><b>Tools:</b>NLTK, SpaCy
+                      <br>
+                      <!-- <b>Industry(ies):</b> Health, Tech/Governance  -->
+                      <br>
+                    </p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
