Removed volunteering modal

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="nlpModalLabel">NLP Modal</h5>
+                    <h5 class="modal-title" id="nlpModalLabel">NLP Profile</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -202,27 +202,7 @@
               </div>
                 <h4>Volunteering &amp; Training</h4>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </div>
-            <!-- Volunteering & Training Modal -->
-            <div class="modal fade" id="volTrainModal" tabindex="-1" role="dialog" aria-labelledby="volTrainModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="volTrainModalLabel">Volunteering &amp; Training Modal</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">a
-                    <p>Volunteering & Training modal content goes here.</p>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            
+            </div>         
           </div>
         </div>
       </section>
