Added volunteering summary

--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
                 <a href="volunteer.html"><i class="bx bx-heart"></i></a>
               </div>
                 <h4>Volunteering &amp; Training</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <p>I actively take part in various volunteering initiatives 
+                  to share my experience and also impart younger generations 
+                  towards a worthy cause.</p>
             </div>         
           </div>
         </div>
