Updated services brief

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <p class="services-heading">Services</p>
               <hr>
               <center>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                <h3 class="section-subheading text-muted">Here are some services I provide based on  skills and expertise.</h3>
               </center>
             </div>
           </div>
