--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 text-center">
+          <!-- <div class="col-lg-3 text-center">
             <div class="card">
               <img class="card-img-top" src="../static/images/chatbot.jpg" alt="Card image">
             </div>
@@ -254,7 +254,7 @@
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="col-lg-3 text-center">
             <div class="card">
