Edite project sizes

--- a/index.html
+++ b/index.html
@@ -201,9 +201,8 @@
                 <a href="volunteer.html"><i class="bx bx-heart"></i></a>
               </div>
                 <h4>Volunteering &amp; Training</h4>
-                <p>I actively take part in various volunteering initiatives 
-                  to share my experience and also impart younger generations 
-                  towards a worthy cause.</p>
+                <p>I actively take part in volunteering initiatives, sharing my experience 
+                  to younger generations towards a worthy cause.</p>
             </div>         
           </div>
         </div>
@@ -223,7 +222,7 @@
         <!-- CARDS FOR PROJECTS -->
         <div class="row">
 
-          <div class="col-lg-3 text-center">
+          <div class="col-lg-6 text-center">
             <div class="card">
               <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
             </div>
@@ -234,12 +233,14 @@
             </div>
           </div>
 
-          <div class="col-lg-3 text-center">
+          <div class="col-lg-6 text-center">
             <div class="card">
               <img class="card-img-top" src="../static/images/peribank.png" alt="Card image">
             </div> 
             <h4>Online Banking</h4>
-            <p>A banking web application using HTML, CSS, JavaScript, and PostgreSQL.</p>
+            <p>A banking web application that includes account creation, balance checking, deposits, withdrawals, 
+              money transfers, and account closures, ensuring correct handling of user inputs 
+              and validation.</p>
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
             </div>
