--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
           <div class="col-lg-6 text-center">
             <div class="card">
-              <img class="card-img-top" src="../static/images/peribank.png" alt="Card image">
+              <img class="card-img-top" src="../static/images/peribank_resize.png" alt="Card image">
             </div> 
             <h4>Online Banking</h4>
             <p>A banking web application that includes account creation, balance checking, deposits, withdrawals, 
