Modify project 2 description

--- a/index.html
+++ b/index.html
@@ -238,9 +238,7 @@
               <img class="card-img-top" src="../static/images/peribank_resize.png" alt="Card image">
             </div> 
             <h4>Online Banking</h4>
-            <p>A banking web application that includes account creation, balance checking, deposits, withdrawals, 
-              money transfers, and account closures, ensuring correct handling of user inputs 
-              and validation.</p>
+            <p>A banking web application that includes basic online transcations.</p>
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
             </div>
