Added cybreX template

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <h4>Text Classification</h4>
             <p> A simple classification API to predict if a message is spam or ham (not spam).</p>
             <div class="btn-box btns">
-              <a href="pending.html" class="btn" id="btn">Explore</a>
+              <a href="../cybreX site/templates/index.html" class="btn" id="btn">Explore</a>
             </div>
           </div>
 
