Added link to blog post

--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
           <div class="row">
             <div class="col-lg-2 text-center">
                 <h4>Blog Post 1</h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+              <p>Building a Spam Classification Web App with Flask: A Step-by-Step Guide</p>
               <div class="btn-box btns">
-                <a href="pending.html" class="btn" id="btn">Read</a>
+                <a href="spam_blog.html" class="btn" id="btn">Read</a>
               </div>
               </div>
     
