Linked name logo to index page

--- a/spam_blog.html
+++ b/spam_blog.html
@@ -19,7 +19,7 @@
   <body>
       <!-- NAVIGATION BAR -->
       <header class="header">
-        <a href="#" class="logo_name" style="text-decoration: none;">Joana Lawer<span class="animate" style="--i:1;"></span></a>
+        <a href="index.html" class="logo_name" style="text-decoration: none;">Joana Lawer<span class="animate" style="--i:1;"></span></a>
 
         <!-- menu icon -->
         <div class='bx bx-menu'id="menu-icon"><span class="animate" style="--i:2;"></span></div>
