--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <h4>Blog Post 1</h4>
               <p>Building a Spam Classification Web App with Flask: A Step-by-Step Guide</p>
               <div class="btn-box btns">
-                <a href="spam_blog.html" class="btn" id="btn">Read</a>
+                <a href="https://medium.com/@joanalawer001/my-first-ml-project-spam-classification-web-app-with-flask-a-step-by-step-guide-8e906deedae4" class="btn" id="btn">Read</a>
               </div>
               </div>
     
