--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                 <a href="#contact" class="btn">Let's Talk</a>
               </div>
               <div class="social-profile">
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/joanalawer"><i class='bx bxl-github'></i></a>
+                <a href="www.linkedin.com/in/joanalawer"><i class='bx bxl-linkedin'></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
               </div>    
             </div>
@@ -344,7 +344,7 @@
               
               <div class="contact-details">
                 <i class='bx bx-envelope'></i>lawerjoana477@gmail.com<br>
-                <i class='bx bx-globe'></i>www.joanalawer.me
+                <i class='bx bx-globe'></i>www.joanalawer.site
               </div>
 
               <div class="social-profile">
