--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           <div class="intro">
             <h3>Welcome to <span>Joana Lawer</span>'s homepage.</h3>
-            <p>Welcome to my personal webpage! I'm a passionate web developer with a keen interest in Natural Language Processing (NLP).
+            <p>I'm a passionate web developer with a keen interest in Natural Language Processing (NLP).
               <br>
               I believe in using technology to make a positive impact, and I actively contribute to various volunteering initiatives.
             </p>
