--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <!-- PROFILE MODAL END -->
       
       <!-- SERVICES -->
-      <section class="blog" id="blog">
+      <section class="services" id="services">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center" style="padding-bottom: 3%">
