Test social icon positions

--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
               <div class="contact-details">
                 <i class='bx bx-envelope'></i>lawerjoana477@gmail.com<br>
                 <i class='bx bx-globe'></i>www.joanalawer.site
+                <a href="#"><i class='bx bxl-github'></i></a>
               </div>
 
               <div class="social-profile">
