--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
               
               <div class="contact-details">
                 <i class='bx bx-envelope'></i>lawerjoana477@gmail.com<br>
-                <i class='bx bx-globe'></i>www.joanalawer.site<br>
+                <i class='bx bx-globe'></i>joanalawer.github.io<br>
               </div>
 
               <div class="social-profile">
