--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                     </p>
                   </div>
                       <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary"><a href="pending.html" class="btn">Veiw Projects</a>
+                      Explore</button>
                   </div>
                 </div>
               </div>
