--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </p>
                   </div>
                       <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary"><a href="pending.html" class="btn"></a>Veiw Projects</button>
+                    <button type="button" class="btn btn-secondary"><a href="pending.html" class="btn">Veiw Projects</a></button>
                   </div>
                 </div>
               </div>
