Added new button type

--- a/index.html
+++ b/index.html
@@ -125,8 +125,11 @@
                       <br>
                     </p>
                   </div>
-                      <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary"><a href="pending.html" class="btn">Veiw Projects</a></button>
+                  <div class="modal-footer">
+                    <div class="btn-box">
+                      <a href="pending.html" class="btn">View Projects</a>
+                    </div>
+                        <button type="button" class="btn btn-secondary"><a href="pending.html" class="btn">Veiw Projects</a></button>
                   </div>
                 </div>
               </div>
