Deleted button tag

--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
                   </div>
                   <div class="modal-footer">
                     <div class="btn-box">
-                      <a href="pending.html" class="btn">View Projects</a>
+                      <a href="pending.html" class="btn">Projects</a>
                     </div>
-                        <button type="button" class="btn btn-secondary"><a href="pending.html" class="btn">Veiw Projects</a></button>
                   </div>
                 </div>
               </div>
