--- a/volunteer.html
+++ b/volunteer.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Joana Lawer | Home</title>
+    <title>Joana Lawer | Social Impact</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
