Redirect chart to analysis page

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
           <div class="row">
             <div class="col-lg-3 text-center">
               <div class="services-icon" data-toggle="modal" data-target="#dataAnalysisModal">
-                <a href="#"><i class="bx bx-bar-chart"></i></a>
+                <a href="analysis.html"><i class="bx bx-bar-chart"></i></a>
               </div>
                 <h4>Data Analysis</h4>
                 <p>Experience in data visualization, developing and maintaing dashboards, database
                   management and reporting.</p>
             </div>
             <!-- Data Analysis Modal -->
-            <div class="modal fade" id="dataAnalysisModal" tabindex="-1" role="dialog" aria-labelledby="dataAnalysisModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="dataAnalysisModal" tabindex="-1" role="dialog" aria-labelledby="dataAnalysisModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -127,12 +127,12 @@
                   </div>
                   <div class="modal-footer">
                     <div class="btn-box">
-                      <a href="pending.html" class="btn">Projects</a>
+                      <a href="analysis.html" class="btn">Projects</a>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="col-lg-3 text-center">
               <div class="services-icon" data-toggle="modal" data-target="#weDevModal">
