--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     
           <div class="row">
             <div class="col-lg-3 text-center">
-              <div class="services-icon" data-toggle="modal" data-target="#dataAnalysisModal">
+              <div class="services-icon"> <!--data-toggle="modal" data-target="#dataAnalysisModal"> -->
                 <a href="analysis.html"><i class="bx bx-bar-chart"></i></a>
               </div>
                 <h4>Data Analysis</h4>
