--- a/analysis.html
+++ b/analysis.html
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="col-lg-12 text-center">
               <h2 class="section-heading text-uppercase">Data Analysis Portfolio</h2>
-              <h3 class="section-subheading text-muted">A glimpse of the projects I've been working on</h3>
+              <h3 class="section-subheading text-muted">An overview of the projects I've been working on</h3>
               <!-- <div id="portfolio-button-container">
                 <button class="btn btn-secondary active" data-portfolio-section="all">Show all</button>
                 <button class="btn btn-secondary" data-portfolio-section="mining">Data mining</button>
@@ -125,7 +125,7 @@
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2024. By Joana Lawer | All Rights Reserved.</p>
-            <p>Design inspired by: <a href="https://codehalweb.com/">Codehal</a> and <a href="#">Another website</a></p>
+            <p>Design inspired by: <a href="https://codehalweb.com/">Codehal</a> and <a href="https://www.yan-holtz.com/">Yan Holtz</a></p>
         </div>
 
         <div class="footer-icon">
