Style second footer paragraph

--- a/analysis.html
+++ b/analysis.html
@@ -39,7 +39,7 @@
 
 
       <!-- DATA ANALYSIS PORTFOLIO -->
-      <section class="services" id="portfolio">
+      <section class="bg-light portfolio" id="portfolio">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center">
@@ -65,7 +65,7 @@
                   <div class="portfolio-hover-content">
                     <p>Sales Analysis Dashboard</p>
                     <hr>
-                    <p class="explanation_portfolio">Assessing the geographic distribution of genetic traits<br></p>
+                    <p class="explanation_portfolio">A comprehensive analysis report on sales across the Americas<br></p>
                   </div>
                 </div>
                 <img class="img-fluid" src="#" alt="">
@@ -125,7 +125,7 @@
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2024. By Joana Lawer | All Rights Reserved.</p>
-            <p>Design inspired by: <a href="https://codehalweb.com/">Codehal</a> and <a href="https://www.yan-holtz.com/">Yan Holtz</a></p>
+            <p style="font-size: x-small;">Design inspired by: <a href="https://codehalweb.com/">Codehal</a> and <a href="https://www.yan-holtz.com/">Yan Holtz</a></p>
         </div>
 
         <div class="footer-icon">
