Added link to linkedin, github footer

--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
               </div>
 
               <div class="social-profile">
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/joanalawer"><i class='bx bxl-github'></i></a>
+                <a href="www.linkedin.com/in/joanalawer"><i class='bx bxl-linkedin'></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
               </div>
 
