Added twitter links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <div class="social-profile">
                 <a href="https://github.com/joanalawer"><i class='bx bxl-github'></i></a>
                 <a href="www.linkedin.com/in/joanalawer"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="https://x.com/joana_lawer"><i class='bx bxl-twitter'></i></a>
               </div>    
             </div>
           </div>
@@ -327,7 +327,7 @@
               <div class="social-profile">
                 <a href="https://github.com/joanalawer"><i class='bx bxl-github'></i></a>
                 <a href="www.linkedin.com/in/joanalawer"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="https://x.com/joana_lawer"><i class='bx bxl-twitter'></i></a>
               </div>
 
             </div>
