--- a/analysis.html
+++ b/analysis.html
@@ -37,7 +37,6 @@
       </header>
       <!-- END NAVIGATION BAR -->
 
-
       <!-- DATA ANALYSIS PORTFOLIO -->
       <section class="bg-light data-portfolio" id="data-portfolio">
         <div class="container">
@@ -50,7 +49,7 @@
               </center>
             </div>
             <div class="col-lg-12 text-center">
-              <div id="data-portfolio-container">
+              <div class="skill-btn" id="data-portfolio-container">
                 <button class="btn btn-secondary" data-portfolio-section="mining">Data Cleaning</button>
                 <button class="btn btn-secondary" data-portfolio-section="dataviz">Dataviz</button>
                 <button class="btn btn-secondary" data-portfolio-section="paper">Dashboard</button>
@@ -64,7 +63,7 @@
                 <div class="card">
                   <img class="card-img-top" src="../static/images/hs_all_regions.png" alt="Card image">
                 </div>
-                <a class="data-potfolio-link" href="#">
+                <a class="data-potfolio-link" href="https://medium.com/@joanalawer001/sales-data-analysis-b0f7bfcc76c8">
                   <h4>Sales Analysis Dashboard</h4>
                   <p>A comprehensive analysis report on sales across the Americas.</p>
                 </a>
