--- a/analysis.html
+++ b/analysis.html
@@ -63,10 +63,12 @@
                 <div class="card">
                   <img class="card-img-top" src="../static/images/hs_all_regions.png" alt="Card image">
                 </div>
-                <a class="data-potfolio-link" href="https://medium.com/@joanalawer001/sales-data-analysis-b0f7bfcc76c8">
-                  <h4>Sales Analysis Dashboard</h4>
-                  <p>A comprehensive analysis report on sales across the Americas.</p>
-                </a>
+                <div class="data-portfolio-links">
+                  <a class="data-link" href="https://medium.com/@joanalawer001/sales-data-analysis-b0f7bfcc76c8">
+                    <p style="font-weight: bold; font-size: medium;">Sales Analysis Dashboard</p>
+                    <p style="font-style: italic; font-size: smaller;">A comprehensive analysis report on sales across the Americas.</p>
+                  </a>
+                </div>
               </div>
             </div>
     
