--- a/spam_blog.html
+++ b/spam_blog.html
@@ -45,7 +45,7 @@
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2024. By Joana Lawer | All Rights Reserved.</p>
-            <p>Design inspired by: <a href="https://codehalweb.com/">Codehal</a> and <a href="#">Another website</a></p>
+            <!-- <p>Design inspired by: <a href="https://codehalweb.com/">Codehal</a> and <a href="#">Another website</a></p> -->
         </div>
 
         <div class="footer-icon">
