--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </button>
                   </div>
                   <div class="profile-statement ">
-                    <p><b>Tools:</b>NLTK, SpaCy
+                    <p><b>Tools:</b>Python, NLTK, Tensorflow
                       <br>
                       <!-- <b>Industry(ies):</b> Health, Tech/Governance  -->
                       <br>
@@ -199,7 +199,7 @@
         <!-- CARDS FOR PROJECTS -->
         <div class="row">
 
-          <div class="col-lg-6 text-center">
+          <div class="col-lg-3 text-center">
             <div class="card">
               <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
             </div>
@@ -210,7 +210,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 text-center">
+          <div class="col-lg-3 text-center">
             <div class="card">
               <img class="card-img-top" src="../static/images/peribank_resize.png" alt="Card image">
             </div> 
@@ -221,27 +221,38 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 text-center">
+          <div class="col-lg-3 text-center">
             <div class="card">
               <img class="card-img-top" src="../static/images/chatbot.jpg" alt="Card image">
             </div>
             <h4>Personal Assistant Chatbot</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <p>Designed to assist with daily routines; providing reminders, scheduling tasks.</p>
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
             </div>
-          </div> -->
+          </div>
 
-          <!-- <div class="col-lg-3 text-center">
+          <div class="col-lg-3 text-center">
+            <div class="card">
+              <img class="card-img-top" src="../static/images/privacy.jpeg" alt="Card image">
+            </div>
+            <h4>Diffense</h4>
+            <p>An API to compare privacy policies and highlight key differences in updates.</p>
+            <div class="btn-box btns">
+              <a href="pending.html" class="btn" id="btn">Explore</a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 text-center">
             <div class="card">
               <img class="card-img-top" src="../static/images/ghana-par.jpg" alt="Card image">
             </div>
             <h4>Constitution Query</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <p>A platform that helps to efficiently search, understand, and compare provisions of the Ghanaian Constitution.</p>
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
             </div>
-          </div> -->
+          </div>
 
         </div>
       </section>
