--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
                 <a href="analysis.html"><i class="bx bx-bar-chart"></i></a>
               </div>
                 <h4>Data Analysis</h4>
-                <p>Experience in data visualization, developing and maintaing dashboards, database
-                  management and reporting.</p>
+                <p>Data visualization, developing and maintaing dashboards, database management and reporting.</p>
             </div>
 
             <div class="col-lg-3 text-center">
@@ -114,7 +113,7 @@
                 <a href="#"><i class="bx bx-code-alt"></i></a>
               </div>
                 <h4>Web Development</h4>
-                <p>Skilled in front-end and back-end development, database management, and ensuring seamless functionality.</p>
+                <p>Front-end and back-end development, database management, and ensuring seamless functionality.</p>
             </div>
             <!-- Web Development Modal -->
             <div class="modal fade" id="weDevModal" tabindex="-1" role="dialog" aria-labelledby="webDevModalLabel" aria-hidden="true">
@@ -127,7 +126,7 @@
                     </button>
                   </div>
                   <div class="profile-statement ">
-                    <p><b>Tools:</b> Html, CSS, JavaScript, Bootstrap, NodeJS, PostgreSQL, MySQL, Flask, Git/GitHub, WordPress
+                    <p><b>Tools:</b> HTML, CSS, JavaScript, Bootstrap, NodeJS, PostgreSQL, MySQL, Flask, Git/GitHub, WordPress
                       <br>
                       <!-- <b>Industry(ies):</b> Health, Tech/Governance  -->
                       <br>
@@ -179,7 +178,7 @@
               </div>
                 <h4>Volunteering &amp; Training</h4>
                 <p>I actively take part in volunteering initiatives, sharing my experience 
-                  to younger generations towards a worthy cause.</p>
+                  to younger generations through workshops and mentorship programs, towards a worthy cause.</p>
             </div>         
           </div>
         </div>
@@ -196,6 +195,7 @@
             </center>
           </div>
         </div>
+        
         <!-- CARDS FOR PROJECTS -->
         <div class="row">
 
