--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <div class="card">
               <img class="card-img-top" src="../static/images/privacy.jpeg" alt="Card image">
             </div>
-            <h4>Diffense</h4>
+            <h4>PrivaVerse</h4>
             <p>An API to compare privacy policies and highlight key differences in updates.</p>
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
