--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 text-center">
+          <!-- <div class="col-lg-3 text-center">
             <div class="card">
               <img class="card-img-top" src="../static/images/ghana-par.jpg" alt="Card image">
             </div>
@@ -252,7 +252,7 @@
             <div class="btn-box btns">
               <a href="pending.html" class="btn" id="btn">Explore</a>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </section>
