--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <h4>Text Classification</h4>
             <p> A simple classification API to predict if a message is spam or ham (not spam).</p>
             <div class="btn-box btns">
-              <a href="https://cybrex.onrender.com" class="btn" id="btn">Explore</a>
+              <a href="https://cybrex.onrender.com" target="_blank" class="btn" id="btn">Explore</a>
             </div>
           </div>
 
