--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     
           <div class="row">
             <div class="col-lg-2 text-center">
-                <h4>Blog Post 1</h4>
+                <h4>Text Classification</h4>
               <p>Building a Spam Classification Web App with Flask: A Step-by-Step Guide</p>
               <div class="btn-box btns">
                 <a href="https://medium.com/@joanalawer001/my-first-ml-project-spam-classification-web-app-with-flask-a-step-by-step-guide-8e906deedae4" class="btn" id="btn">Read</a>
