--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <img class="card-img-top" src="../static/images/text.jpg" alt="Card image">
             </div>
             <h4>Text Classification</h4>
-            <p> A simple classification API to predict if a message is spam or ham (not spam).</p>
+            <p> A simple classification Web App to predict if a message is spam or ham (not spam).</p>
             <div class="btn-box btns">
               <a href="https://cybrex.onrender.com" target="_blank" class="btn" id="btn">Explore</a>
             </div>
