Set topic for second blog

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
               </div>
     
             <div class="col-lg-2 text-center">
-                <h4>Blog Post 2</h4>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <h4>Deploying a Web App (Render)</h4>
+              <p>How to deploy a simple Flask Web App for public access using Render.</p>
               <div class="btn-box btns">
                 <a href="pending.html" class="btn" id="btn">Read</a>
               </div>
