Redesign using React

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- LANDING PAGE -->
       <section class="home" id="home">
           <div class="home-img">
-            <img src="../static/images/lawer.png" alt="">
+            <img src="../static/images/lawer.jpg" alt="">
             <span class="circle-spin"></span>
           </div>
           <div class="intro">
