Updated profile on modal

--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
             <span class="circle-spin"></span>
           </div>
           <div class="intro">
-            <h3>Welcome to <span>Joana Lawer</span>'s homepage.</h3>
-            <p>I'm a passionate web developer with a keen interest in Natural Language Processing (NLP).
+            <!-- <h3>Welcome to <span>Joana Lawer</span>'s homepage.</h3> -->
+            <p>I'm Front-End developer who builds user-friendly systems that solve real-world problems. With proficiency in HTML, CSS, JavaScript, React, and PostgreSQL, 
+              I focus on creating digital solutions that are both powerful and intuitive.
               <br>
-              I believe in using technology to make a positive impact, and I actively contribute to various volunteering initiatives.
+              Beyond coding, I'm passionate about turning data into decisions.
+              I use Python and Excel to create clear visualizations that help teams understand complex information and make informed choices.
+              <br>
+              I also believe in giving back—I regularly volunteer to share my technical knowledge and contribute to social impact initiatives.
+              <br>
+              Whether I'm building applications, analyzing data, or mentoring others, I'm driven by the opportunity to use technology to make a meaningful difference.
             </p>
           </div>          
           <div class="btn-box btns text-center">
@@ -62,13 +68,12 @@
               <span class="close">&times;</span>
               <h1>Hi, I'm <span>Joana</span></h1>
               <div class="profile-statement ">
-                <p>Skills:
+                <p >
+                  <b>Skills: </b> Front-End Development, Data Analysis
                   <br>
-                  Experience:
+                  <b>Tools: </b>  HTML, CSS, JavaScript, React, PostgreSQL, Python, Excel
                   <br>
-                  Fun Fact:
-                  <br>
-                  Resume:
+                  <b>Fun Fact: </b> Crochet, Movies, Good Food
                 </p>
               </div>
               <div class="btn-box">
@@ -81,7 +86,6 @@
               </div>    
             </div>
           </div>
-
         </div>
       </div>
       <!-- PROFILE MODAL END -->
@@ -107,7 +111,7 @@
                 <h4>Data Analysis</h4>
                 <p>Data visualization, developing and maintaing dashboards, database management and reporting.</p>
             </div>
-
+            <!-- WED DEVELOPMENT PORTFOILO BEGINS -->
             <div class="col-lg-3 text-center">
               <div class="services-icon" data-toggle="modal" data-target="#weDevModal">
                 <a href="#"><i class="bx bx-code-alt"></i></a>
