--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <div class="col-lg-6">
               
               <div class="contact-details">
-                <i class='bx bx-envelope'></i>lawerjoana477@gmail.com<br>
+                <i class='bx bx-envelope'></i>joanalawer.site@gmail.com<br>
                 <i class='bx bx-globe'></i>joanalawer.github.io<br>
               </div>
 
